objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>The recorded company name of the speaker.</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The recorded email of the speaker.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The recorded phone number of the speaker.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>